@@ -1605,6 +1605,30 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.setPokerAccount, 0, PACKET_POKER_SET_ACCOUNT)
         return d
     # ------------------------------------------------------------------------
+    def tourneySelect(self, (client, packet), id ):
+        avatar = self.service.avatars[id]
+        avatar.queuePackets()
+        avatar.handlePacketLogic(PacketPokerTourneySelect(string = ""))
+        for packet in avatar.resetPacketsQueue():
+            if packet.type == PACKET_POKER_TOURNEY_LIST:
+                count = 0
+                for p in packet.packets:
+                    assert p.name.find("sitngo") >= 0 or  p.name.find("egular")
+                    assert p.name.find("registering") >= 0 or  p.name.find("announced")
+                    count += 1
+                    print "tourney: "
+                    print p
+                self.assertEquals(count, 25)
+        return (client, packet)
+    # ------------------------------------------------------------------------
+    def test35_tourneys(self):
+        """Test sending the set poker account packet."""
+        d = self.client_factory[0].established_deferred
+        d.addCallback(self.sendExplain)
+        d.addCallback(self.login, 0)
+        d.addCallback(self.tourneySelect, 0)
+        return d
+    # ------------------------------------------------------------------------
     def tinyFunctions(self, (client, packet), id):
         avatar = self.service.avatars[id]
         self.assertEquals(avatar.getUrl(), "random")
@@ -1620,7 +1644,7 @@ class PokerAvatarTestCase(unittest.TestCase):
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test32"
+#    loader.methodPrefix = "test35"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
